--- a/Stock_price_prediction.ipynb
+++ b/Stock_price_prediction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TO DO\n",
+    "# TO DO - TRY THE FOLLOWING TO SEE IF THERE IS IMPROVEMENT\n",
     "1. Add Grid Search\n",
     "2. Try different architectures such as:\n",
     "- GRU (Gated Recurrent Unit)\n",
@@ -92,8 +92,8 @@
     "# Dataset\n",
     "\n",
     "The dataset is downloaded from Yahoo as a csv.\n",
-    "For this project as of date March 1st 2024, I am choosing Bershire Hathawat as it has gone under an stable growing trajectory and to analyse if from here there is more upside. \n",
-    "Link: https://finance.yahoo.com/quote/NVDA/history"
+    "For this project as of date March 1st 2024, I am choosing Berkshire Hathaway as it has gone under an stable growing trajectory and to analyse if from here there is more upside. \n",
+    "Link: https://finance.yahoo.com/quote/BRK-B/history"
    ]
   },
   {
