--- a/Stock_price_prediction.ipynb
+++ b/Stock_price_prediction.ipynb
@@ -39890,7 +39890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be see that the model has no idea what the value will be, it just assumes it will be the same, thus, this model is valid for a span of couple a single day at most, at it needs the previous two days before as input."
+    "It can be see that the model has no idea what the value will be, it just assumes it will be the same, thus, this model is valid for a span of a single day at most, at it needs the previous two days before as input."
    ]
   },
   {
